Revision history for Gimp-Perl extension.

1.05  Fri Dec 18 22:05:25 CET 1998
	- some 5.006 compatibility fixes
        - disabled some functionality for poor gtk-1.0 which
          is borken to no end
        - fixed PARASITE_PERSISTENT typoe
        - new functions: gimp_{major,minor,micro}_version
        - PF_BRUSH, PATTERN and GRADIENT widgets are "emulated" in gimp-1.0

1.049 Mon Nov 23 20:54:41 CET 1998
	- updated configure to require 1.0.2
	- added some more scripts to the dist
	- brushes are no longer shown inverted
	- help button && logo for Gimp::Fu. the first doesn't work properly
	  and the second is ugly. feel free to send me a better version.
	- constants are no longer autoloaded (yeah!)
	- bug in Gimp::Net::set_connection fixed as suggested by
	  <alex@mediaconsult.com>

1.048 Fri Nov 13 20:39:52 CET 1998
	- Gimp::Fu::save_image now correctly respects the quality setting
	- allow layers/channels as drawables in typemap
	- allow usage of Gimp::PDL via Gimp::Net (this is a hack!)
	- added optional argument to gimp_init
	- fixed some of the example scripts for the "mega-api-break-it-all-
	  patch"
	- added Gimp::Net::get_connection and set_connection functions
	- the Perl-Server now respects GIMP_HOST and opens a socket
	  according to its content.

1.047 Wed Nov 11 02:47:12 CET 1998
	- passing arguments on the commandline works again
	  (formerly all arguments were treated as integers)
	- added the PDB extension to the distribution (alpha!)
	- added tex-to-float and alpha2color.pl plug-ins
	- fixed some memory leaks (the remaining ones are in the Gimp ;)

1.046 Thu Nov  5 01:53:34 CET 1998
	- the syntax really gets tricky - references to INT32 and similar
	  types are no longer accepted (was buggy anyway).
	- added plug_in_ prefix to layer, drawable, image and channel. We
	  can now write $layer->sharpen(50), and gimp infers function name,
	  run_mode and image
	- enhanced the testuite, it now checks much more features